Prevents client code in ping-server example to show an alert forever
when corrupted data is detected.

--- a/examples/common/ping.html
+++ b/examples/common/ping.html
@@ -59,6 +59,7 @@ function receive (data) {
 
     if (_payload != payload) {
         alert ("payload corrupted!");
+        Evd.transport.setOnReceive (null, null);
         return;
     }
 
