Updates DBus examples to add the new 'reuse' argument of new-connection msgs

--- a/examples/common/dbus-bridge-own-name.html
+++ b/examples/common/dbus-bridge-own-name.html
@@ -78,6 +78,7 @@ function onNewPeer (p) {
     new Evd.DBus.Connection ({
         peer: peer,
         address: DBUS_ADDR,
+        reuse: false,
         callback: function (conn, err) {
             if (! err) {
                 dbusConn = conn;
