Fixes incorrect JS script source in client-side ping server exammple

--- a/examples/common/ping.html
+++ b/examples/common/ping.html
@@ -16,7 +16,7 @@
         white-space: nowrap;
     }
   </style>
-  <script type="text/javascript" src="/transport"></script>
+  <script type="text/javascript" src="/transport/evdWebTransport.js"></script>
   <script type="text/javascript">
 
 var peer;
