--- a/examples/common/dbus-bridge-proxy.html
+++ b/examples/common/dbus-bridge-proxy.html
@@ -125,7 +125,7 @@ function log (msg) {
 
 <body>
   <h2>Example proxy for /org/freedesktop/Notifications</h2>
-  <h3>Notify</h3
+  <h3>Notify</h3>
   <table>
    <tbody>
     <tr>
